[Add] Documentation examples
